fix: resolve conversations #42